--- a/index.html
+++ b/index.html
@@ -44,11 +44,30 @@
 
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <h1 class="text-center fs-3 fst-italic pt-5 ps-4 azul placeholder-wave" data-aos="fade-up-right">Te doy la bienvenida a mi mundo de papel</h1>
+                    <h1 class="text-center fs-2 fst-italic pt-5 ps-4 azul placeholder-wave" data-aos="fade-up-right">Te doy la bienvenida a mi mundo de papel</h1>
                 </div>
 
-                <div class="col-lg-8 col-sm-12 text-center">
-                    <img data-aos="flip-right" src="./img/combinada1.jpg" class="img-fluid w-50" alt="collage">
+                <div id="carouselExampleFade" class="carousel slide carousel-fade col-lg-8 col-sm-12" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="./img/playa.jpg" class="d-block w-50" alt="playa">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/blanco.jpg" class="d-block w-50" alt="trabajando">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/combinada1.jpg" class="d-block w-50" alt="collage">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+
                 </div>
                 
             </div>
@@ -79,6 +98,7 @@
     <script>
         AOS.init();
       </script>
+      
 </body>
 
 </html>
