--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>  
+  <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito</title>
 </head>
@@ -44,7 +44,8 @@
           <h1 class="subtitulo fst-italic text-center">¿Qué es el Quilling?</h1>
         </div>
         <div class="col-lg-6 col-md-12">
-          <p class="texto fs-5 ps-4">El quilling, también llamado filigrana de papel, es una forma de arte que emplea tiras
+          <p class="texto fs-5 ps-4">El quilling, también llamado filigrana de papel, es una forma de arte que emplea
+            tiras
             de papel enrolladas, moldeadas y pegadas con las que se crean diseños decorativos. Aunque sus orígenes
             exactos son un misterio, se cree que el arte del quilling se originó en el antiguo Egipto. Durante el
             Renacimiento se ha practicado en Francia e Italia, así como también en la Inglaterra del siglo XVIII. El
@@ -53,7 +54,10 @@
         </div>
 
         <div class="video col-lg-6 col-md-12 text-center">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/iephILHlgX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/iephILHlgX8" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
 
         </div>
       </div>
@@ -61,21 +65,23 @@
   </main>
 
   <footer class="container-fluid rosa azul pb-4">
-       
+
     <div class="social">
-        <i class="fa-brands fa-instagram"></i>
-        <a href="https://instagram.com/infinito_arte_ar?igshid=YmMyMTA2M2Y="></a>
-        <i class="fa-brands fa-whatsapp"></i>
-        <a href="https://wa.me/5491165529261"></a>
-        <i class="fa-solid fa-envelope"></i>
-        <a href="mailto:infinito.arte89@gmail.com"></a>
+      <i class="fa-brands fa-instagram"></i>
+      <a href="https://instagram.com/infinito_arte_ar?igshid=YmMyMTA2M2Y="></a>
+      <i class="fa-brands fa-whatsapp"></i>
+      <a href="https://wa.me/5491165529261"></a>
+      <i class="fa-solid fa-envelope"></i>
+      <a href="mailto:infinito.arte89@gmail.com"></a>
 
     </div>
 
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-</script>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+
 </body>
 
 </html>
