arreglo formulario contactos

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -41,12 +41,13 @@
         <label for="nombre_apellido">Ingrese nombre y apellido:</label>
         <input type="text" name="nombre_apellido" /> <br>
         <label for="telefono">Ingrese su teléfono:</label>
-        <input type="number" mane="telefono"/> <br>
+        <input type="number" name="telefono"/> <br>
         <div>Celular</div>
         <input type="radio" name="tipo" value="Celular" />
         <div>Fijo</div>
         <input type="radio" name="tipo" value="Fijo" /> <br>
-        <input type="number" name="telefono"> <br>
+        <label for="email" name="email">Ingrese su email:</label>
+        <input type="email" name="email"/> <br>
         <label for="consulta">Ingrese su consulta:</label> <br>
         <textarea type="text" name="consulta" id="" cols="50" rows="10"></textarea> <br>
 
