--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Infinito Arte con Papel, Quilling, Cuadros personalizados, Contacto">
+  <meta name="keywords" content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO, CONTACTO">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
-  <title>Infinito</title>
+  <title>Infinito Contacto</title>
 </head>
 
 <body>
@@ -55,6 +57,21 @@
         <input type="reset" value=" Borrar " />
     
       </form>
+
+      <!-- mixin -->
+
+      <div class="titulo1">Cómo encargo mi cuadro:</div>
+
+      <!-- extend -->
+      <p class="encargo--1">1. Elegí del portfolio el cuadro que te guste.</p>
+      <p class="encargo--2">2. Mandame un mensaje desde el formulario de esta página, indicando el nombre del cuadro.</p>
+      <p class="encargo--3">3. Sino me podés escribir a través de alguna de estas opciones:</p>
+
+      <!-- map -->
+
+      <div><input type="button" value="Instagram" class="red--instagram"></div>
+      <div><input type="button" value="WhatsApp" class="red--whatsapp"></div>
+      <div><input type="button" value="Email" class="red--email"></div>
 
     </section>
 
