--- a/secciones/sobremi.html
+++ b/secciones/sobremi.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Infinito Arte con Papel, Quilling, Cuadros personalizados, Sobre mi">
+  <meta name="keywords" content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
-  <title>Infinito</title>
+  <title>Infinito Arte</title>
 </head>
 
 <body>
@@ -48,14 +50,7 @@
         </div>
 
         <div class="col-lg-9 col-sm-10">
-          <p class="texto fs-5 pe-4 text-center">Mi nombre es Hebe y desde pequeña me apasionaron las manualidades. Conocí la
-            técnica del quilling
-            en el año 2017, y apenas la ví fue amor a primera vista. En ese momento fue una manera de
-            desconectar del stress laboral, y después se convirtió en un pequeño emprendimiento gracias al
-            apoyo de la gente que me rodea. Me caracterizan el detalle, la prolijidad y la originalidad,
-            pero principalmente mis obras se destacan por el amor y la dedicación con que son hechas. Adoro
-            hacer arte con tiras de papel, darles forma y ver como se van transformando en todo lo que se me
-            ocurre.</p>
+          <p class="texto fs-5 pe-4 text-center">Mi nombre es Hebe y desde pequeña me apasionaron las manualidades. Conocí la técnica del quilling en el año 2017, y apenas la ví fue amor a primera vista. En ese momento fue una manera de desconectar del stress laboral, y después se convirtió en un pequeño emprendimiento gracias al      apoyo de la gente que me rodea. Me caracterizan el detalle, la prolijidad y la originalidad, pero principalmente mis obras se destacan por el amor y la dedicación con que son hechas. Adoro hacer arte con tiras de papel, darles forma y ver como se van transformando en todo lo que se me ocurre.</p>
 
         </div>
 
