--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -12,6 +12,7 @@
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito Contacto</title>
+  <link rel="shortcut icon" href="./img/favicon.png">
 </head>
 
 <body>
