--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -12,6 +12,8 @@
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito Quilling</title>
+  <link rel="shortcut icon" href="./img/favicon.png">
+  
 </head>
 
 <body>
