--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Infinito Arte</title>
+    <link rel="shortcut icon" href="./img/favicon.png">
+
 </head>
 
 <body>
