agrego foto y fuente

--- a/secciones/portfolio.html
+++ b/secciones/portfolio.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../estilos/style.css">
     <title>Infinito Portfolio</title>
-    <link rel="shortcut icon" href="./img/favicon.png">
+    <link rel="shortcut icon" href="../img/favicon.png">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light rosa">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../img/logo.png" alt="logo" class="w-75">
+                    <img src="../img/logo.png" alt="logo" class="w-50">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -45,56 +45,63 @@
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/buho.jpeg" alt="Buho">
+                    <img class="foto shadow-lg rounded" src="../img/buho.jpeg" alt="Buho">
                     <figcaption>Búho</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/colibri.jpeg" alt="Colibri">
+                    <img class="foto shadow-lg rounded" src="../img/colibri.jpeg" alt="Colibri">
                     <figcaption>Colibrí</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/corazon.jpeg" alt="Corazon">
+                    <img class="foto shadow-lg rounded" src="../img/corazon.jpeg" alt="Corazon">
                     <figcaption>Corazón</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/elefante.jpeg" alt="Elefante">
+                    <img class="foto shadow-lg rounded" src="../img/elefante.jpeg" alt="Elefante">
                     <figcaption>Elefante</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/eliseo.jpeg" alt="Eliseo">
+                    <img class="foto shadow-lg rounded" src="../img/eliseo.jpeg" alt="Eliseo">
                     <figcaption>Eliseo</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/hamsa.jpeg" alt="Hamsa">
+                    <img class="foto shadow-lg rounded" src="../img/hamsa.jpeg" alt="Hamsa">
                     <figcaption>Hamsa</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/leon.jpeg" alt="Leon">
+                    <img class="foto shadow-lg rounded" src="../img/leon.jpeg" alt="Leon">
                     <figcaption>León geométrico</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto" src="../img/mariposa.jpeg" alt="Mariposa">
+                    <img class="foto shadow-lg rounded" src="../img/boca.jpg" alt="Boca Juniors">
+                    <figcaption>Boca Juniors</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/mariposa.jpeg" alt="Mariposa">
                     <figcaption>Mariposa</figcaption>
                 </figure>
             </div>
