--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito Quilling</title>
-  <link rel="shortcut icon" href="./img/favicon.png">
+  <link rel="shortcut icon" href="../img/favicon.png">
   
 </head>
 
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light rosa">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img src="../img/logo.png" alt="logo" class="w-75">
+          <img src="../img/logo.png" alt="logo" class="w-50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,9 +43,9 @@
   <main class="rosa">
 
     <div class="container-fluid azul">
-      <div class="row">
+      <div class="row pb-3">
         <div class="col-lg-12">
-          <h1 class="subtitulo fst-italic text-center">¿Qué es el Quilling?</h1>
+          <h1 class="subtitulo fst-italic text-center pb-4">¿Qué es el Quilling?</h1>
         </div>
         <div class="col-lg-6 col-md-12">
           <p class="texto fs-5 ps-4">El quilling, también llamado filigrana de papel, es una forma de arte que emplea
@@ -57,7 +57,7 @@
             menudo, imitaba la herrería de la época. </p>
         </div>
 
-        <div class="video col-lg-6 col-md-12 text-center">
+        <div class="video col-lg-6 col-md-12 text-center shadow-lg rounded">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/iephILHlgX8" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
