--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-light rosa">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="./img/logo.png" alt="logo" class="w-75">
+                    <img src="./img/logo.png" alt="logo" class="w-50">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -48,7 +48,7 @@
 
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <h1 class="text-center fs-2 fst-italic pt-5 ps-4 azul placeholder-wave" data-aos="fade-up-right">Te doy la bienvenida a mi mundo de papel</h1>
+                    <h1 class="text-center fs-2 fst-italic pt-5 ps-4 azul placeholder-wave fuente" data-aos="fade-up-right">Te doy la bienvenida a mi mundo de papel</h1>
                 </div>
 
                 <div id="carouselExampleFade" class="carousel slide carousel-fade col-lg-8 col-sm-12" data-bs-ride="carousel">
