--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito Contacto</title>
-  <link rel="shortcut icon" href="./img/favicon.png">
+  <link rel="shortcut icon" href="../img/favicon.png">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light rosa">
       <div class="container-fluid d-flex">
         <a class="navbar-brand" href="../index.html">
-          <img src="../img/logo.png" alt="logo" class="w-75">
+          <img src="../img/logo.png" alt="logo" class="w-50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
