--- a/secciones/sobremi.html
+++ b/secciones/sobremi.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito Arte</title>
-  <link rel="shortcut icon" href="./img/favicon.png">
+  <link rel="shortcut icon" href="../img/favicon.png">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light rosa">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img src="../img/logo.png" alt="logo" class="w-75">
+          <img src="../img/logo.png" alt="logo" class="w-50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,13 +45,13 @@
         <div class="col-lg-12">
           <h1 class="subtitulo fst-italic pt-2 pb-4 text-center">Sobre mi</h1>
         </div>
-        <div class="col-lg-3 col-sm-2 text-center">
-          <img src="../img/yo.jpeg" alt="Hebe" class="w-75 text-center">
+        <div class="col-lg-4 col-sm-2 text-center">
+          <img src="../img/yo.jpeg" alt="Hebe" class="w-75 text-center shadow-lg p-3 mb-5 bg-body rounded">
 
         </div>
 
-        <div class="col-lg-9 col-sm-10">
-          <p class="texto fs-5 pe-4 text-center">Mi nombre es Hebe y desde pequeña me apasionaron las manualidades. Conocí la técnica del quilling en el año 2017, y apenas la ví fue amor a primera vista. En ese momento fue una manera de desconectar del stress laboral, y después se convirtió en un pequeño emprendimiento gracias al      apoyo de la gente que me rodea. Me caracterizan el detalle, la prolijidad y la originalidad, pero principalmente mis obras se destacan por el amor y la dedicación con que son hechas. Adoro hacer arte con tiras de papel, darles forma y ver como se van transformando en todo lo que se me ocurre.</p>
+        <div class="col-lg-8 col-sm-10">
+          <p class="texto fs-5 pt-4 pe-4 text-center lh-lg">Mi nombre es Hebe y desde pequeña me apasionaron las manualidades. Conocí la técnica del quilling en el año 2017, y apenas la ví fue amor a primera vista. En ese momento fue una manera de desconectar del stress laboral, y después se convirtió en un pequeño emprendimiento gracias al      apoyo de la gente que me rodea. Me caracterizan el detalle, la prolijidad y la originalidad, pero principalmente mis obras se destacan por el amor y la dedicación con que son hechas. Adoro hacer arte con tiras de papel, darles forma y ver como se van transformando en todo lo que se me ocurre.</p>
 
         </div>
 
