--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Infinito Arte con Papel, Quilling, Cuadros personalizados, Contacto">
+  <meta name="description" content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
   <meta name="keywords" content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO, CONTACTO">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
