--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
+  <meta name="description"
+    content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
   <meta name="keywords" content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO, CONTACTO">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -40,40 +41,47 @@
 
   <main class="rosa">
     <section class="container-fluid">
-      <form class="formulario azul">
-        <label for="nombre_apellido">Ingrese nombre y apellido:</label>
-        <input type="text" name="nombre_apellido" /> <br>
-        <label for="telefono">Ingrese su teléfono:</label>
-        <input type="number" name="telefono"/> <br>
-        <div>Celular</div>
-        <input type="radio" name="tipo" value="Celular" />
-        <div>Fijo</div>
-        <input type="radio" name="tipo" value="Fijo" /> <br>
-        <label for="email" name="email">Ingrese su email:</label>
-        <input type="email" name="email"/> <br>
-        <label for="consulta">Ingrese su consulta:</label> <br>
-        <textarea type="text" name="consulta" id="" cols="50" rows="10"></textarea> <br>
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <form class="formulario azul">
+            <label for="nombre_apellido">Ingrese nombre y apellido:</label>
+            <input type="text" name="nombre_apellido" /> <br>
+            <label for="telefono">Ingrese su teléfono:</label>
+            <input type="number" name="telefono" /> <br>
+            <div>Celular</div>
+            <input type="radio" name="tipo" value="Celular" />
+            <div>Fijo</div>
+            <input type="radio" name="tipo" value="Fijo" /> <br>
+            <label for="email" name="email">Ingrese su email:</label>
+            <input type="email" name="email" /> <br>
+            <label for="consulta">Ingrese su consulta:</label> <br>
+            <textarea type="text" name="consulta" id="" cols="50" rows="10"></textarea> <br>
 
-        <input type="submit" value=" Enviar " />
-        <input type="reset" value=" Borrar " />
+            <input type="submit" class="azul" value=" Enviar " />
+            <input type="reset" class="azul" value=" Borrar " />
+
+          </form>
+
+        </div>
+
+        <div class="col-lg-6 col-sm-12">
+          <p class="azul fs-3 fw-bold">Cómo encargar tu cuadro:</p>
+          <p class="azul fs-5">1. Elegí del portfolio el cuadro que te guste.</p>
+          <p class="azul fs-5">2. Mandame un mensaje desde el formulario de esta página, indicando el nombre del cuadro.
+          </p>
+          <p class="azul fs-5">3. Sino me podés contactar a través de alguna de estas opciones:</p>
+          
+          <div class="azul ps-5 fs-3">
+            <p>@infinito_arte_ar</p>
+            <p>11-6552-9261</p>
+            <p>infinito.arte89@gmail.com</p>
+
+          </div>
+
+        </div>
+
+      </div>
     
-      </form>
-
-      <!-- mixin -->
-
-      <div class="titulo1">Cómo encargo mi cuadro:</div>
-
-      <!-- extend -->
-      <p class="encargo--1">1. Elegí del portfolio el cuadro que te guste.</p>
-      <p class="encargo--2">2. Mandame un mensaje desde el formulario de esta página, indicando el nombre del cuadro.</p>
-      <p class="encargo--3">3. Sino me podés escribir a través de alguna de estas opciones:</p>
-
-      <!-- map -->
-
-      <div><input type="button" value="Instagram" class="red--instagram"></div>
-      <div><input type="button" value="WhatsApp" class="red--whatsapp"></div>
-      <div><input type="button" value="Email" class="red--email"></div>
-
     </section>
 
   </main>
