--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
+    <meta name="description"
+        content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
     <meta name="keywords" content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -21,15 +22,19 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light rosa">
             <div class="container-fluid">
+
                 <a class="navbar-brand" href="index.html">
                     <img src="./img/logo.png" alt="logo" class="w-50">
                 </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="./secciones/quilling.html">¿Qué es el
                             Quillling?</a>
@@ -37,14 +42,18 @@
                         <a class="nav-link active" href="./secciones/sobremi.html">Sobre mi</a>
                         <a class="nav-link active" href="./secciones/contacto.html">Contacto</a>
                     </div>
+
                 </div>
+
             </div>
+
         </nav>
+
     </header>
 
     <main class="rosa">
 
-        <section class="container-fluid">
+        <section class="container-fluid pb-4">
 
             <div class="row">
                 <div class="col-lg-5 col-sm-12">
@@ -54,17 +63,18 @@
 
                 <div id="carouselExampleFade" class="carousel slide carousel-fade col-lg-7 col-sm-12"
                     data-bs-ride="carousel">
-                    <div class="carousel-inner">
+                    <div class="carousel-inner ">
                         <div class="carousel-item active">
-                            <img src="./img/playa.jpg" class="d-block w-50" alt="playa">
+                            <img src="./img/combinada1.jpg" class="d-block w-50" alt="playa">
                         </div>
                         <div class="carousel-item">
                             <img src="./img/blanco.jpg" class="d-block w-50" alt="trabajando">
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/combinada1.jpg" class="d-block w-50" alt="collage">
+                            <img src="./img/playa.jpg" class="d-block w-50" alt="collage">
                         </div>
-                    </div>
+                    </div> 
+
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
