--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
-  <meta name="keywords" content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO, HISTORIA DEL QUILLING">
+  <meta name="description"
+    content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
+  <meta name="keywords"
+    content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO, HISTORIA DEL QUILLING">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito Quilling</title>
   <link rel="shortcut icon" href="../img/favicon.png">
-  
+
 </head>
 
 <body>
@@ -24,10 +26,12 @@
         <a class="navbar-brand" href="../index.html">
           <img src="../img/logo.png" alt="logo" class="w-50">
         </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav azul">
             <a class="nav-link active" aria-current="page" href="quilling.html">¿Qué es el Quillling?</a>
@@ -35,9 +39,13 @@
             <a class="nav-link active" href="sobremi.html">Sobre mi</a>
             <a class="nav-link active" href="contacto.html">Contacto</a>
           </div>
+
         </div>
+
       </div>
+
     </nav>
+
   </header>
 
   <main class="rosa">
@@ -47,6 +55,7 @@
         <div class="col-lg-12">
           <h1 class="subtitulo fst-italic text-center pb-4">¿Qué es el Quilling?</h1>
         </div>
+
         <div class="col-lg-6 col-md-12">
           <p class="texto fs-5 ps-4">El quilling, también llamado filigrana de papel, es una forma de arte que emplea
             tiras
@@ -62,10 +71,10 @@
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-
         </div>
-      </div>
 
+      </div>
+    </div>
   </main>
 
   <footer class="container-fluid rosa azul pb-4">
