--- a/secciones/sobremi.html
+++ b/secciones/sobremi.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
+  <meta name="description"
+    content="Nos dedicamos al Arte con Papel, Quilling, Cuadros personalizados a pedido, Envíos a todo el país">
   <meta name="keywords" content="QUILLING, ARTE CON PAPEL, CUADROS PERSONALIZADOS, CUADROS A PEDIDO">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -22,10 +23,12 @@
         <a class="navbar-brand" href="../index.html">
           <img src="../img/logo.png" alt="logo" class="w-50">
         </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav azul">
             <a class="nav-link active" aria-current="page" href="quilling.html">¿Qué es el Quillling?</a>
@@ -45,13 +48,19 @@
         <div class="col-lg-12">
           <h1 class="subtitulo fst-italic pt-2 pb-4 text-center">Sobre mi</h1>
         </div>
+
         <div class="col-lg-4 col-sm-2 text-center">
           <img src="../img/yo.jpeg" alt="Hebe" class="w-75 text-center shadow-lg p-3 mb-5 bg-body rounded">
-
         </div>
 
         <div class="col-lg-8 col-sm-10">
-          <p class="texto fs-5 pt-4 pe-4 text-center lh-lg">Mi nombre es Hebe y desde pequeña me apasionaron las manualidades. Conocí la técnica del quilling en el año 2017, y apenas la ví fue amor a primera vista. En ese momento fue una manera de desconectar del stress laboral, y después se convirtió en un pequeño emprendimiento gracias al      apoyo de la gente que me rodea. Me caracterizan el detalle, la prolijidad y la originalidad, pero principalmente mis obras se destacan por el amor y la dedicación con que son hechas. Adoro hacer arte con tiras de papel, darles forma y ver como se van transformando en todo lo que se me ocurre.</p>
+          <p class="texto fs-5 pt-4 pe-4 text-center lh-lg">Mi nombre es Hebe y desde pequeña me apasionaron las
+            manualidades. Conocí la técnica del quilling en el año 2017, y apenas la ví fue amor a primera vista. En ese
+            momento fue una manera de desconectar del stress laboral, y después se convirtió en un pequeño
+            emprendimiento gracias al apoyo de la gente que me rodea. Me caracterizan el detalle, la prolijidad y la
+            originalidad, pero principalmente mis obras se destacan por el amor y la dedicación con que son hechas.
+            Adoro hacer arte con tiras de papel, darles forma y ver como se van transformando en todo lo que se me
+            ocurre.</p>
 
         </div>
 
