--- a/index.html
+++ b/index.html
@@ -53,45 +53,14 @@
 
     <main class="rosa">
 
-        <section class="container-fluid pb-4">
+        <div id="grilla">
+            <p class="frase fuente azul">Te doy la bienvenida a mi mundo de papel</p>
+            <img class="inicio1" src="./img/bowie.jpg" alt="bowie">
+            <img class="inicio2" src="./img/oriana.jpeg" alt="oriana">
+            <img class="inicio3" src="./img/playa.jpg" alt="playa">
+        </div>
 
-            <div class="row">
-                <div class="col-lg-5 col-sm-12">
-                    <h1 class="text-center fs-2 fst-italic pt-5 ps-4 azul placeholder-wave fuente"
-                        data-aos="fade-up-right">Te doy la bienvenida a mi mundo de papel</h1>
-                </div>
-
-                <div id="carouselExampleFade" class="carousel slide carousel-fade col-lg-7 col-sm-12"
-                    data-bs-ride="carousel">
-                    <div class="carousel-inner ">
-                        <div class="carousel-item active">
-                            <img src="./img/combinada1.jpg" class="d-block w-50" alt="playa">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./img/blanco.jpg" class="d-block w-50" alt="trabajando">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./img/playa.jpg" class="d-block w-50" alt="collage">
-                        </div>
-                    </div> 
-
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-
-                </div>
-
-
-            </div>
-
-        </section>
+        
 
     </main>
 
