arreglo sobre mi

--- a/secciones/sobremi.html
+++ b/secciones/sobremi.html
@@ -49,11 +49,11 @@
           <h1 class="subtitulo fst-italic pt-2 pb-4 text-center">Sobre mi</h1>
         </div>
 
-        <div class="col-lg-4 col-sm-2 text-center">
+        <div class="col-lg-4 col-md-5 col-sm-4 text-center">
           <img src="../img/yo.jpeg" alt="Hebe" class="w-75 text-center shadow-lg p-3 mb-5 bg-body rounded">
         </div>
 
-        <div class="col-lg-8 col-sm-10">
+        <div class="col-lg-8 col-md-7 col-sm-8">
           <p class="texto fs-5 pt-4 pe-4 text-center lh-lg">Mi nombre es Hebe y desde pequeña me apasionaron las
             manualidades. Conocí la técnica del quilling en el año 2017, y apenas la ví fue amor a primera vista. En ese
             momento fue una manera de desconectar del stress laboral, y después se convirtió en un pequeño
