agrego links en footer

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -90,13 +90,13 @@
 
     <div class="social">
       <i class="fa-brands fa-instagram"></i>
-      <a href="https://instagram.com/infinito_arte_ar?igshid=YmMyMTA2M2Y="></a>
+      <a class="dire azul" href="https://instagram.com/infinito_arte_ar?igshid=YmMyMTA2M2Y=">@infinito_arte_ar</a>
       <i class="fa-brands fa-whatsapp"></i>
-      <a href="https://wa.me/5491165529261"></a>
+      <a class="dire azul" href="https://wa.me/5491165529261">WhatsApp</a>
       <i class="fa-solid fa-envelope"></i>
-      <a href="mailto:infinito.arte89@gmail.com"></a>
+      <a class="dire azul" href="mailto:infinito.arte89@gmail.com">infinito.arte89@gmail.com</a>
 
-    </div>
+  </div>
 
   </footer>
 
