--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -42,7 +42,7 @@
   <main class="rosa">
     <section class="container-fluid">
       <div class="row">
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <form class="formulario azul">
             <label for="nombre_apellido">Ingrese nombre y apellido:</label>
             <input type="text" name="nombre_apellido" /> <br>
@@ -64,14 +64,14 @@
 
         </div>
 
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <p class="azul fs-3 fw-bold">Cómo encargar tu cuadro:</p>
           <p class="azul fs-5">1. Elegí del portfolio el cuadro que te guste.</p>
-          <p class="azul fs-5">2. Mandame un mensaje desde el formulario de esta página, indicando el nombre del cuadro.
+          <p class="azul fs-5">2. Mandame un mensaje desde el formulario, indicando el nombre del cuadro. Si querés algo que no viste en mi página contame de que se trata; puedo hacer un nuevo diseño especialmente para vos.
           </p>
           <p class="azul fs-5">3. Sino me podés contactar a través de alguna de estas opciones:</p>
           
-          <div class="azul ps-5 fs-3">
+          <div class="azul ps-5 fs-5">
             <p>@infinito_arte_ar</p>
             <p>11-6552-9261</p>
             <p>infinito.arte89@gmail.com</p>
