agrego fotos al portfolio

--- a/secciones/portfolio.html
+++ b/secciones/portfolio.html
@@ -46,9 +46,18 @@
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/buho.jpeg" alt="Buho">
+                    <img class="foto shadow-lg rounded" src="../img/buho.jpeg" alt="buho">
                     <figcaption>Búho</figcaption>
                 </figure>
+            </div>
+
+            <div class="fotos">
+
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/leon.jpeg" alt="leon geometrico">
+                    <figcaption>León geométrico</figcaption>
+                </figure>
+
             </div>
 
             <div class="fotos">
@@ -60,50 +69,120 @@
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/corazon.jpeg" alt="Corazon">
+                    <img class="foto shadow-lg rounded" src="../img/hamsaNegra.jpeg" alt="hamsa negra">
+                    <figcaption>Hamsa Negra</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/lobo.jpeg" alt="lobo">
+                    <figcaption>Lobo</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/corazon.jpeg" alt="corazon">
                     <figcaption>Corazón</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/elefante.jpeg" alt="Elefante">
+                    <img class="foto shadow-lg rounded" src="../img/elefante.jpeg" alt="elefante">
                     <figcaption>Elefante</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/eliseo.jpeg" alt="Eliseo">
+                    <img class="foto shadow-lg rounded" src="../img/eliseo.jpeg" alt="eliseo">
                     <figcaption>Eliseo</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/hamsa.jpeg" alt="Hamsa">
-                    <figcaption>Hamsa</figcaption>
+                    <img class="foto shadow-lg rounded" src="../img/leonPerfil.jpg" alt="leon delineado">
+                    <figcaption>León delineado</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/leon.jpeg" alt="Leon">
-                    <figcaption>León geométrico</figcaption>
+                    <img class="foto shadow-lg rounded" src="../img/luciana.jpeg" alt="luciana">
+                    <figcaption>Luciana</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/boca.jpg" alt="Boca Juniors">
+                    <img class="foto shadow-lg rounded" src="../img/hamsa.jpeg" alt="hamsa azul">
+                    <figcaption>Hamsa azul</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/frida.jpeg" alt="frida">
+                    <figcaption>Frida</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/mandalaRosa.jpeg" alt="mandala rosa">
+                    <figcaption>Mandala Rosa</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/boca.jpg" alt="boca juniors">
                     <figcaption>Boca Juniors</figcaption>
                 </figure>
             </div>
 
             <div class="fotos">
                 <figure>
-                    <img class="foto shadow-lg rounded" src="../img/mariposa.jpeg" alt="Mariposa">
+                    <img class="foto shadow-lg rounded" src="../img/mariposa.jpeg" alt="mariposa">
                     <figcaption>Mariposa</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/olivia.jpeg" alt="olivia">
+                    <figcaption>Olivia</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/trebol.jpeg" alt="trebol">
+                    <figcaption>Trébol Celta</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/mandalaIslamico.jpg" alt="mandala islamico">
+                    <figcaption>Mandala Islámico</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/racing.jpeg" alt="racing club">
+                    <figcaption>Racing Club</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/atrapasueños.jpeg" alt="atrapasueños">
+                    <figcaption>Atrapasueños</figcaption>
                 </figure>
             </div>
 
