--- a/secciones/sobremi.html
+++ b/secciones/sobremi.html
@@ -49,18 +49,18 @@
           <h1 class="subtitulo fst-italic pt-2 pb-4 text-center">Sobre mi</h1>
         </div>
 
-        <div class="col-lg-4 col-md-5 col-sm-4 text-center">
-          <img src="../img/yo.jpeg" alt="Hebe" class="w-75 text-center shadow-lg p-3 mb-5 bg-body rounded">
+        <div class="col-lg-5 col-md-6 col-sm-12 text-center">
+          <img src="../img/blanco.jpg" alt="trabajando" class="w-75 text-center shadow-lg p-3 mb-5 bg-body rounded">
         </div>
 
-        <div class="col-lg-8 col-md-7 col-sm-8">
-          <p class="texto fs-5 pt-4 pe-4 text-center lh-lg">Mi nombre es Hebe y desde pequeña me apasionaron las
+        <div class="col-lg-7 col-md-6 col-sm-12">
+          <p class="texto fs-5 pt-4 pe-5 ps-4 text-start lh-lg">Mi nombre es Hebe y desde pequeña me apasionaron las
             manualidades. Conocí la técnica del quilling en el año 2017, y apenas la ví fue amor a primera vista. En ese
             momento fue una manera de desconectar del stress laboral, y después se convirtió en un pequeño
             emprendimiento gracias al apoyo de la gente que me rodea. Me caracterizan el detalle, la prolijidad y la
             originalidad, pero principalmente mis obras se destacan por el amor y la dedicación con que son hechas.
             Adoro hacer arte con tiras de papel, darles forma y ver como se van transformando en todo lo que se me
-            ocurre.</p>
+            ocurre, pero sobre todo me encanta cuando me piden que haga un trabajo especial que no haya hecho antes; me encantan los desafíos.</p>
 
         </div>
 
