--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -17,32 +17,47 @@
 </head>
 
 <body>
+
   <header>
+
     <nav class="navbar navbar-expand-lg navbar-light rosa">
+
       <div class="container-fluid d-flex">
+
         <a class="navbar-brand" href="../index.html">
           <img src="../img/logo.png" alt="logo" class="w-50">
         </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
           <div class="navbar-nav azul">
             <a class="nav-link active" aria-current="page" href="quilling.html">¿Qué es el Quillling?</a>
             <a class="nav-link active" href="portfolio.html">Portfolio</a>
             <a class="nav-link active" href="sobremi.html">Sobre mi</a>
             <a class="nav-link active" href="contacto.html">Contacto</a>
           </div>
+
         </div>
+
       </div>
+
     </nav>
+
   </header>
 
   <main class="rosa">
+
     <section class="container-fluid">
+
       <div class="row">
+
         <div class="col-lg-6 col-md-6 col-sm-12">
+
           <form class="formulario azul">
             <label for="nombre_apellido">Ingrese nombre y apellido:</label>
             <input type="text" name="nombre_apellido" /> <br>
@@ -56,19 +71,17 @@
             <input type="email" name="email" /> <br>
             <label for="consulta">Ingrese su consulta:</label> <br>
             <textarea type="text" name="consulta" id="" cols="50" rows="10"></textarea> <br>
-
             <input type="submit" class="azul" value=" Enviar " />
             <input type="reset" class="azul" value=" Borrar " />
-
           </form>
 
         </div>
 
         <div class="col-lg-6 col-md-6 col-sm-12">
+
           <p class="azul fs-3 fw-bold">Cómo encargar tu cuadro:</p>
           <p class="azul fs-5">1. Elegí del portfolio el cuadro que te guste.</p>
-          <p class="azul fs-5">2. Mandame un mensaje desde el formulario, indicando el nombre del cuadro. Si querés algo que no viste en mi página contame de que se trata; puedo hacer un nuevo diseño especialmente para vos.
-          </p>
+          <p class="azul fs-5">2. Mandame un mensaje desde el formulario, indicando el nombre del cuadro. Si querés algo que no viste en mi página contame de que se trata; puedo hacer un nuevo diseño especialmente para vos.</p>
           <p class="azul fs-5">3. Sino me podés contactar a través de alguna de estas opciones:</p>
           
           <div class="azul ps-5 fs-5">
@@ -95,7 +108,6 @@
       <a class="dire azul" href="https://wa.me/5491165529261">WhatsApp</a>
       <i class="fa-solid fa-envelope"></i>
       <a class="dire azul" href="mailto:infinito.arte89@gmail.com">infinito.arte89@gmail.com</a>
-
   </div>
 
   </footer>
