--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -21,8 +21,11 @@
 <body>
 
   <header>
+
     <nav class="navbar navbar-expand-lg navbar-light rosa">
+
       <div class="container-fluid">
+
         <a class="navbar-brand" href="../index.html">
           <img src="../img/logo.png" alt="logo" class="w-50">
         </a>
@@ -33,6 +36,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
           <div class="navbar-nav azul">
             <a class="nav-link active" aria-current="page" href="quilling.html">¿Qué es el Quillling?</a>
             <a class="nav-link active" href="portfolio.html">Portfolio</a>
@@ -51,12 +55,14 @@
   <main class="rosa">
 
     <div class="container-fluid azul">
+
       <div class="row pb-3">
+
         <div class="col-lg-12">
           <h1 class="subtitulo fst-italic text-center pb-4">¿Qué es el Quilling?</h1>
         </div>
 
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-5 col-md-12">
           <p class="texto fs-5 ps-4">El quilling, también llamado filigrana de papel, es una forma de arte que emplea
             tiras
             de papel enrolladas, moldeadas y pegadas con las que se crean diseños decorativos. Aunque sus orígenes
@@ -66,7 +72,7 @@
             menudo, imitaba la herrería de la época. </p>
         </div>
 
-        <div class="video col-lg-6 col-md-12 text-center shadow-lg rounded">
+        <div class="video col-lg-7 col-md-12 text-center py-5 shadow-lg rounded modal-lg">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/iephILHlgX8" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -74,7 +80,9 @@
         </div>
 
       </div>
+
     </div>
+
   </main>
 
   <footer class="container-fluid rosa azul pb-4">
@@ -86,8 +94,7 @@
       <a class="dire azul" href="https://wa.me/5491165529261">WhatsApp</a>
       <i class="fa-solid fa-envelope"></i>
       <a class="dire azul" href="mailto:infinito.arte89@gmail.com">infinito.arte89@gmail.com</a>
-
-  </div>
+    </div>
 
   </footer>
 
