arreglo tamaño video

--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -58,12 +58,12 @@
 
       <div class="row pb-3">
 
-        <div class="col-lg-12">
+        <div class="col-lg-12 ps-4 pe-4">
           <h1 class="subtitulo fst-italic text-center pb-4">¿Qué es el Quilling?</h1>
         </div>
 
-        <div class="col-lg-5 col-md-12">
-          <p class="texto fs-5 ps-4">El quilling, también llamado filigrana de papel, es una forma de arte que emplea
+        <div class="col-lg-6 col-md-12">
+          <p class="texto fs-5 ">El quilling, también llamado filigrana de papel, es una forma de arte que emplea
             tiras
             de papel enrolladas, moldeadas y pegadas con las que se crean diseños decorativos. Aunque sus orígenes
             exactos son un misterio, se cree que el arte del quilling se originó en el antiguo Egipto. Durante el
@@ -72,8 +72,8 @@
             menudo, imitaba la herrería de la época. </p>
         </div>
 
-        <div class="video col-lg-7 col-md-12 text-center py-5 shadow-lg rounded modal-lg">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/iephILHlgX8" title="YouTube video player"
+        <div class="video col-lg-6 col-md-12 text-center">
+          <iframe width="459" height="258" src="https://www.youtube.com/embed/iephILHlgX8" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
