arreglo index home

--- a/secciones/portfolio.html
+++ b/secciones/portfolio.html
@@ -196,6 +196,27 @@
                 </figure>
             </div>
 
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/bowie.jpg" alt="bowie">
+                    <figcaption>David Bowie</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/playa.jpg" alt="playa">
+                    <figcaption>Playa</figcaption>
+                </figure>
+            </div>
+
+            <div class="fotos">
+                <figure>
+                    <img class="foto shadow-lg rounded" src="../img/oriana.jpeg" alt="oriana">
+                    <figcaption>Oriana</figcaption>
+                </figure>
+            </div>
+
         </section>
 
     </main>
