arreglo seccion quilling

--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -67,9 +67,7 @@
             tiras
             de papel enrolladas, moldeadas y pegadas con las que se crean diseños decorativos. Aunque sus orígenes
             exactos son un misterio, se cree que el arte del quilling se originó en el antiguo Egipto. Durante el
-            Renacimiento se ha practicado en Francia e Italia, así como también en la Inglaterra del siglo XVIII. El
-            papel más utilizado eran tiras de papel recortadas de los bordes dorados de los libros. El quilling, a
-            menudo, imitaba la herrería de la época. </p>
+            Renacimiento se ha practicado en Francia e Italia, así como también en la Inglaterra del siglo XVIII. En otro tiempo se utilizaba el eje central de las plumas de los pájaros para enrollar las tiras de papel. El nombre quilling proviene de la palabra quill, que en inglés significa pluma. El papel más utilizado eran tiras de papel recortadas de los bordes dorados de los libros. El quilling, a menudo, imitaba las filigranas de oro y plata de los orfebres, por lo que también se la llama filigrana de papel. </p>
         </div>
 
         <div class="video col-lg-6 col-md-12 text-center">
