--- a/secciones/sobremi.html
+++ b/secciones/sobremi.html
@@ -58,8 +58,8 @@
           <h1 class="subtitulo fst-italic pt-2 pb-4 text-center">Sobre mi</h1>
         </div>
 
-        <div class="col-lg-5 col-md-6 col-sm-12 text-center">
-          <img src="../img/blanco.jpg" alt="trabajando" class="w-75 text-center shadow-lg p-3 mb-5 bg-body rounded">
+        <div class="col-lg-5 col-md-6 col-sm-12 d-flex align-items-center justify-content-md-center">
+          <img src="../img/blanco.jpg" alt="trabajando" class="w-100  shadow-lg p-3 mb-5 bg-body">
         </div>
 
         <div class="col-lg-7 col-md-6 col-sm-12">
