--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -56,7 +56,7 @@
 
       <div class="row">
 
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-5 col-md-6 col-sm-12">
 
           <form class="formulario azul">
             <label for="nombre_apellido">Ingrese nombre y apellido:</label>
@@ -70,20 +70,21 @@
             <label for="email" name="email">Ingrese su email:</label>
             <input type="email" name="email" /> <br>
             <label for="consulta">Ingrese su consulta:</label> <br>
-            <textarea type="text" name="consulta" id="" cols="50" rows="10"></textarea> <br>
+            <textarea type="text" name="consulta" id="" cols="40" rows="15"></textarea> <br>
             <input type="submit" class="azul" value=" Enviar " />
             <input type="reset" class="azul" value=" Borrar " />
           </form>
 
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-7 col-md-6 col-sm-12">
 
           <p class="azul fs-3 fw-bold">Cómo encargar tu cuadro:</p>
           <p class="azul fs-5">1. Elegí del portfolio el cuadro que te guste.</p>
-          <p class="azul fs-5">2. Mandame un mensaje desde el formulario, indicando el nombre del cuadro. Si querés algo que no viste en mi página contame de que se trata; puedo hacer un nuevo diseño especialmente para vos.</p>
-          <p class="azul fs-5">3. Sino me podés contactar a través de alguna de estas opciones:</p>
-          
+          <p class="azul fs-5">2. Mandame un mensaje desde el formulario, indicando el nombre del cuadro.</p>
+          <p class="azul fs-5">3. Si querés algo que no viste en mi página contame de que se trata; puedo hacer un nuevo diseño especialmente para vos.</p>
+          <p class="azul fs-5">4. Sino me podés contactar a través de alguna de estas opciones:</p>
+
           <div class="azul ps-5 fs-5">
             <p>@infinito_arte_ar</p>
             <p>11-6552-9261</p>
