agrego mini logo

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -89,7 +89,10 @@
             <p>@infinito_arte_ar</p>
             <p>11-6552-9261</p>
             <p>infinito.arte89@gmail.com</p>
+          </div>
 
+          <div class="container-fluid text-center">
+            <img  class="mini" src="../img/mini.png" alt="infinito arte">
           </div>
 
         </div>
