agrego animaciones en index

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
         <div id="grilla">
             <p class="frase fuente azul">Te doy la bienvenida a mi mundo de papel</p>
-            <img class="inicio1" src="./img/bowie.jpg" alt="bowie">
-            <img class="inicio2" src="./img/oriana.jpeg" alt="oriana">
-            <img class="inicio3" src="./img/playa.jpg" alt="playa">
+            <img class="inicio1 animacion shadow-lg rounded" src="./img/bowie.jpg" alt="bowie">
+            <img class="inicio2 animacion shadow-lg rounded" src="./img/oriana.jpeg" alt="oriana">
+            <img class="inicio3 animacion shadow-lg rounded" src="./img/playa.jpg" alt="playa">
         </div>
 
     </main>
