--- a/secciones/quilling.html
+++ b/secciones/quilling.html
@@ -70,7 +70,7 @@
             Renacimiento se ha practicado en Francia e Italia, así como también en la Inglaterra del siglo XVIII. En otro tiempo se utilizaba el eje central de las plumas de los pájaros para enrollar las tiras de papel. El nombre quilling proviene de la palabra quill, que en inglés significa pluma. El papel más utilizado eran tiras de papel recortadas de los bordes dorados de los libros. El quilling, a menudo, imitaba las filigranas de oro y plata de los orfebres, por lo que también se la llama filigrana de papel. </p>
         </div>
 
-        <div class="video col-lg-6 col-md-12 text-center">
+        <div class="video col-lg-6 col-md-12 text-center shadow-lg rounded">
           <iframe width="459" height="258" src="https://www.youtube.com/embed/iephILHlgX8" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
