--- a/secciones/sobremi.html
+++ b/secciones/sobremi.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/bff5eaa00c.js" crossorigin="anonymous"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="../estilos/style.css">
   <title>Infinito Arte</title>
   <link rel="shortcut icon" href="../img/favicon.png">
@@ -58,8 +59,8 @@
           <h1 class="subtitulo fst-italic pt-2 pb-4 text-center">Sobre mi</h1>
         </div>
 
-        <div class="col-lg-5 col-md-6 col-sm-12 d-flex align-items-center justify-content-md-center">
-          <img src="../img/blanco.jpg" alt="trabajando" class="w-100  shadow-lg p-3 mb-5 bg-body">
+        <div class="col-lg-5 col-md-6 col-sm-12 d-flex align-items-center justify-content-md-center ">
+          <img data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" src="../img/blanco.jpg" alt="trabajando" class="w-100  shadow-lg p-3 mb-5 bg-body">
         </div>
 
         <div class="col-lg-7 col-md-6 col-sm-12">
@@ -95,7 +96,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  
 </body>
 
 </html>
