--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="./secciones/quilling.html">¿Qué es el
-                            Quillling?</a>
+                            Quilling?</a>
                         <a class="nav-link active" href="./secciones/portfolio.html">Portfolio</a>
                         <a class="nav-link active" href="./secciones/sobremi.html">Sobre mi</a>
                         <a class="nav-link active" href="./secciones/contacto.html">Contacto</a>
