--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-light rosa">
+        <nav class="navbar navbar-expand-lg rosa">
 
             <div class="container-fluid">
 
@@ -40,11 +40,11 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="./secciones/quilling.html">¿Qué es el
+                        <a class="nav-link active azul" aria-current="page" href="./secciones/quilling.html">¿Qué es el
                             Quilling?</a>
-                        <a class="nav-link active" href="./secciones/portfolio.html">Portfolio</a>
-                        <a class="nav-link active" href="./secciones/sobremi.html">Sobre mi</a>
-                        <a class="nav-link active" href="./secciones/contacto.html">Contacto</a>
+                        <a class="nav-link active azul" href="./secciones/portfolio.html">Portfolio</a>
+                        <a class="nav-link active azul" href="./secciones/sobremi.html">Sobre mi</a>
+                        <a class="nav-link active azul" href="./secciones/contacto.html">Contacto</a>
                     </div>
 
                 </div>
